# c-accumulator

./: CMakeLists.txt  LICENSE  README.md  accumulator.cpp  accumulator.h  main.cpp  util.cpp  util.h  vector_commitment.cpp  vector_commitment.h
group/: classgroup.cpp  classgroup.h
hash/: Hash.cpp  Hash.h
proof/: poe.cpp  poe.h  poke2.cpp  poke2.h
